<resources>
    <string name="app_name">pastelist</string>
    <string name="task_name">Task name</string>
    <string name="add_task">Add task</string>
    <string name="inbox">Inbox</string>
    <string name="task_description">Task description</string>
    <string name="atTaskDate">Task date</string>
    <string name="atTaskTime">Task time</string>
    <string name="switch_views">Switch views</string>
    <string name="add_time">Add time</string>
    <string name="save">Save</string>
    <string name="no_date">No date</string>
    <string name="date">Date</string>
    <string name="upcoming">Upcoming</string>
    <string name="overdue">OVERDUE</string>
    <string name="clock_icon">Clock icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="preferences">Preferences</string>
    <string name="tasks">Tasks</string>
    <string name="tmp">tmp</string>

    <string name="delete_task">Delete task?</string>
    <string name="delete_task_no_question_mark">Delete task</string>
    <string name="keep_it">Keep it</string>
    <string name="yes_delete">Yes, delete</string>

    <string name="menu">Menu</string>

    <string name="duplicate_task">Duplicate task</string>

    <string-array name="upcoming_filter_options">
        <item>This week</item>
        <item>This month</item>
        <item>2 months</item>
        <item>3 months</item>
    </string-array>

</resources>