<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    style="?android:attr/buttonBarStyle">

    <!-- Message -->
    <TextView
        android:id="@+id/text_delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textGray"
        android:text="@string/delete_task"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:backgroundTint="@color/white"
            android:textColor="@color/textGray"
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/keep_it"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/pastelRed"
            android:layout_weight="1"
            android:text="@string/yes_delete"
            android:layout_marginStart="8dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>