<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/backgroundWhite">

    <ImageButton
        android:id="@+id/btnTaskMenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="336dp"
        android:contentDescription="@string/menu"
        android:src="@android:drawable/ic_menu_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints="task name"
        android:id="@+id/edTTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/task_name"
        android:textColorHint="@color/hintGray"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTaskMenu" />

    <EditText
        android:autofillHints="task description"
        android:id="@+id/edTTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/task_description"
        android:textColorHint="@color/hintGray"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTTaskName" />

    <Button
        android:id="@+id/btnDate"
        android:fadingEdge="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textGray"
        app:cornerRadius="12dp"
        android:width="260dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTTaskDescription" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/pastelistGreen"
        android:text="@string/save"
        android:textColor="@color/textGray"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/subtaskDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/underline"
        app:layout_constraintTop_toBottomOf="@id/btnDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addSubtaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="@string/add_subtask"
        android:textColor="@color/textGray"
        android:textSize="12sp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtaskDivider" />

    <TextView
        android:id="@+id/subtaskCounter"
        android:layout_width="87dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:text="0/0"
        android:textColor="@color/textGray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/addSubtaskButton"
        app:layout_constraintStart_toEndOf="@id/addSubtaskButton"
        app:layout_constraintTop_toTopOf="@id/addSubtaskButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subTaskView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/addSubtaskButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>